tests/dataset/tpc-ds/compiler/c/q23.error
/tmp/q23.c: In function ‘main’:
/tmp/q23.c:416:7: warning: implicit declaration of function ‘customer_totals_item_list_t_create’ [-Wimplicit-function-declaration]
  416 |       customer_totals_item_list_t_create(tmp5.len);
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/q23.c:416:7: error: invalid initializer
/tmp/q23.c:420:30: warning: implicit declaration of function ‘store_sale_list_t_create’ [-Wimplicit-function-declaration]
  420 |     store_sale_list_t tmp8 = store_sale_list_t_create(_gp.items.len);
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~
/tmp/q23.c:420:30: error: invalid initializer
/tmp/q23.c:464:53: error: ‘(catalog_sale_t *)&catalog_sales’ is a pointer; did you mean to use ‘->’?
  464 |   list_float tmp19 = list_float_create(catalog_sales.len * date_dim.len);
      |                                                     ^
      |                                                     ->
/tmp/q23.c:464:68: error: ‘(date_dim_t *)&date_dim’ is a pointer; did you mean to use ‘->’?
  464 |   list_float tmp19 = list_float_create(catalog_sales.len * date_dim.len);
      |                                                                    ^
      |                                                                    ->
/tmp/q23.c:487:49: error: ‘(web_sale_t *)&web_sales’ is a pointer; did you mean to use ‘->’?
  487 |   list_float tmp23 = list_float_create(web_sales.len * date_dim.len);
      |                                                 ^
      |                                                 ->
/tmp/q23.c:487:64: error: ‘(date_dim_t *)&date_dim’ is a pointer; did you mean to use ‘->’?
  487 |   list_float tmp23 = list_float_create(web_sales.len * date_dim.len);
      |                                                                ^
      |                                                                ->
