tests/dataset/tpc-ds/compiler/c/q23.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static double _sum_float(list_float v) {
  double sum = 0;
  for (int i = 0; i < v.len; i++)
    sum += v.data[i];
  return sum;
}
static double _max_float(list_float v) {
  if (v.len == 0)
    return 0;
  double m = v.data[0];
  for (int i = 1; i < v.len; i++)
    if (v.data[i] > m)
      m = v.data[i];
  return m;
}
static int contains_list_int(list_int v, int item) {
  for (int i = 0; i < v.len; i++)
    if (v.data[i] == item)
      return 1;
  return 0;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct {
  int key;
  list_int items;
} _GroupInt;
typedef struct {
  int len;
  int cap;
  _GroupInt *data;
} list_group_int;
static list_group_int _group_by_int(list_int src) {
  list_group_int res;
  res.len = 0;
  res.cap = 0;
  res.data = NULL;
  for (int i = 0; i < src.len; i++) {
    int key = src.data[i];
    int idx = -1;
    for (int j = 0; j < res.len; j++)
      if (res.data[j].key == key) {
        idx = j;
        break;
      }
    if (idx == -1) {
      if (res.len >= res.cap) {
        res.cap = res.cap ? res.cap * 2 : 4;
        res.data = (_GroupInt *)realloc(res.data, sizeof(_GroupInt) * res.cap);
      }
      res.data[res.len].key = key;
      res.data[res.len].items = list_int_create(0);
      idx = res.len++;
    }
    _GroupInt *g = &res.data[idx];
    g->items.data =
        (int *)realloc(g->items.data, sizeof(int) * (g->items.len + 1));
    g->items.data[g->items.len++] = src.data[i];
  }
  return res;
}
typedef struct StoreSale StoreSale;
typedef struct DateDim DateDim;
typedef struct Item Item;
typedef struct CatalogSale CatalogSale;
typedef struct WebSale WebSale;

typedef struct {
  int ss_item_sk;
  int ss_sold_date_sk;
  int ss_customer_sk;
  int ss_quantity;
  double ss_sales_price;
} store_sale_t;

typedef struct {
  int d_date_sk;
  int d_year;
  int d_moy;
} date_dim_t;

typedef struct {
  int i_item_sk;
} item_t;

typedef struct {
  int cs_sold_date_sk;
  int cs_item_sk;
  int cs_bill_customer_sk;
  int cs_quantity;
  double cs_list_price;
} catalog_sale_t;

typedef struct {
  int ws_sold_date_sk;
  int ws_item_sk;
  int ws_bill_customer_sk;
  int ws_quantity;
  double ws_list_price;
} web_sale_t;

typedef struct {
  int cust;
  double sales;
} customer_totals_item_t;
typedef struct {
  int len;
  customer_totals_item_t *data;
} customer_totals_item_list_t;
customer_totals_item_list_t create_customer_totals_item_list(int len) {
  customer_totals_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_totals_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct StoreSale {
  int ss_item_sk;
  int ss_sold_date_sk;
  int ss_customer_sk;
  int ss_quantity;
  double ss_sales_price;
} StoreSale;
typedef struct {
  int len;
  store_sale_t *data;
} store_sale_list_t;
store_sale_list_t create_store_sale_list(int len) {
  store_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct DateDim {
  int d_date_sk;
  int d_year;
  int d_moy;
} DateDim;
typedef struct {
  int len;
  date_dim_t *data;
} date_dim_list_t;
date_dim_list_t create_date_dim_list(int len) {
  date_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(date_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct Item {
  int i_item_sk;
} Item;
typedef struct {
  int len;
  item_t *data;
} item_list_t;
item_list_t create_item_list(int len) {
  item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct CatalogSale {
  int cs_sold_date_sk;
  int cs_item_sk;
  int cs_bill_customer_sk;
  int cs_quantity;
  double cs_list_price;
} CatalogSale;
typedef struct {
  int len;
  catalog_sale_t *data;
} catalog_sale_list_t;
catalog_sale_list_t create_catalog_sale_list(int len) {
  catalog_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(catalog_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct WebSale {
  int ws_sold_date_sk;
  int ws_item_sk;
  int ws_bill_customer_sk;
  int ws_quantity;
  double ws_list_price;
} WebSale;
typedef struct {
  int len;
  web_sale_t *data;
} web_sale_list_t;
web_sale_list_t create_web_sale_list(int len) {
  web_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(web_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static double test_TPCDS_Q23_cross_channel_sales_result;
static void test_TPCDS_Q23_cross_channel_sales() {
  if (!(test_TPCDS_Q23_cross_channel_sales_result == 50.0)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  store_sale_t store_sales[] = {(store_sale_t){.ss_item_sk = 1,
                                               .ss_sold_date_sk = 1,
                                               .ss_customer_sk = 1,
                                               .ss_quantity = 1,
                                               .ss_sales_price = 10.0},
                                (store_sale_t){.ss_item_sk = 1,
                                               .ss_sold_date_sk = 1,
                                               .ss_customer_sk = 1,
                                               .ss_quantity = 1,
                                               .ss_sales_price = 10.0},
                                (store_sale_t){.ss_item_sk = 1,
                                               .ss_sold_date_sk = 1,
                                               .ss_customer_sk = 1,
                                               .ss_quantity = 1,
                                               .ss_sales_price = 10.0},
                                (store_sale_t){.ss_item_sk = 1,
                                               .ss_sold_date_sk = 1,
                                               .ss_customer_sk = 1,
                                               .ss_quantity = 1,
                                               .ss_sales_price = 10.0},
                                (store_sale_t){.ss_item_sk = 1,
                                               .ss_sold_date_sk = 1,
                                               .ss_customer_sk = 1,
                                               .ss_quantity = 1,
                                               .ss_sales_price = 10.0},
                                (store_sale_t){.ss_item_sk = 2,
                                               .ss_sold_date_sk = 1,
                                               .ss_customer_sk = 2,
                                               .ss_quantity = 1,
                                               .ss_sales_price = 10.0},
                                (store_sale_t){.ss_item_sk = 2,
                                               .ss_sold_date_sk = 1,
                                               .ss_customer_sk = 2,
                                               .ss_quantity = 1,
                                               .ss_sales_price = 10.0},
                                (store_sale_t){.ss_item_sk = 2,
                                               .ss_sold_date_sk = 1,
                                               .ss_customer_sk = 2,
                                               .ss_quantity = 1,
                                               .ss_sales_price = 10.0}};
  int store_sales_len = sizeof(store_sales) / sizeof(store_sales[0]);
  date_dim_t date_dim[] = {
      (date_dim_t){.d_date_sk = 1, .d_year = 2000, .d_moy = 1}};
  int date_dim_len = sizeof(date_dim) / sizeof(date_dim[0]);
  item_t item[] = {(item_t){.i_item_sk = 1}, (item_t){.i_item_sk = 2}};
  int item_len = sizeof(item) / sizeof(item[0]);
  catalog_sale_t catalog_sales[] = {(catalog_sale_t){.cs_sold_date_sk = 1,
                                                     .cs_item_sk = 1,
                                                     .cs_bill_customer_sk = 1,
                                                     .cs_quantity = 2,
                                                     .cs_list_price = 10.0},
                                    (catalog_sale_t){.cs_sold_date_sk = 1,
                                                     .cs_item_sk = 2,
                                                     .cs_bill_customer_sk = 2,
                                                     .cs_quantity = 2,
                                                     .cs_list_price = 10.0}};
  int catalog_sales_len = sizeof(catalog_sales) / sizeof(catalog_sales[0]);
  web_sale_t web_sales[] = {(web_sale_t){.ws_sold_date_sk = 1,
                                         .ws_item_sk = 1,
                                         .ws_bill_customer_sk = 1,
                                         .ws_quantity = 3,
                                         .ws_list_price = 10.0},
                            (web_sale_t){.ws_sold_date_sk = 1,
                                         .ws_item_sk = 2,
                                         .ws_bill_customer_sk = 2,
                                         .ws_quantity = 1,
                                         .ws_list_price = 10.0}};
  int web_sales_len = sizeof(web_sales) / sizeof(web_sales[0]);
  list_int frequent_ss_items = (list_int){0, NULL};
  store_sale_list_t tmp1 = create_store_sale_list(store_sales_len);
  int tmp2_data[store_sales_len];
  list_int tmp2 = {0, tmp2_data};
  int tmp3 = 0;
  for (int i4 = 0; i4 < store_sales_len; i4++) {
    store_sale_t ss = store_sales[i4];
    tmp1.data[tmp3] = ss;
    tmp2.data[tmp3] = ss.ss_customer_sk;
    tmp3++;
  }
  tmp1.len = tmp3;
  tmp2.len = tmp3;
  list_group_int tmp5 = _group_by_int(tmp2);
  customer_totals_item_list_t tmp6 =
      customer_totals_item_list_t_create(tmp5.len);
  int tmp7 = 0;
  for (int gi = 0; gi < tmp5.len; gi++) {
    _GroupInt _gp = tmp5.data[gi];
    store_sale_list_t tmp8 = store_sale_list_t_create(_gp.items.len);
    for (int i9 = 0; i9 < _gp.items.len; i9++) {
      tmp8.data[i9] = tmp1.data[_gp.items.data[i9]];
    }
    tmp8.len = _gp.items.len;
    struct {
      int key;
      store_sale_list_t items;
    } g = {_gp.key, tmp8};
    list_float tmp10 = list_float_create(g.items.len);
    int tmp11 = 0;
    for (int i12 = 0; i12 < g.items.len; i12++) {
      store_sale_t x = g.items.data[i12];
      tmp10.data[tmp11] = x.ss_quantity * x.ss_sales_price;
      tmp11++;
    }
    tmp10.len = tmp11;
    tmp6.data[tmp7] =
        (customer_totals_item_t){.cust = g.key, .sales = _sum_float(tmp10)};
    tmp7++;
  }
  tmp6.len = tmp7;
  customer_totals_item_list_t customer_totals = tmp6;
  list_float tmp13 = list_float_create(customer_totals.len);
  int tmp14 = 0;
  for (int tmp15 = 0; tmp15 < customer_totals.len; tmp15++) {
    customer_totals_item_t c = customer_totals.data[tmp15];
    tmp13.data[tmp14] = c.sales;
    tmp14++;
  }
  tmp13.len = tmp14;
  double max_sales = _max_float(tmp13);
  list_int tmp16 = list_int_create(customer_totals.len);
  int tmp17 = 0;
  for (int tmp18 = 0; tmp18 < customer_totals.len; tmp18++) {
    customer_totals_item_t c = customer_totals.data[tmp18];
    if (!(c.sales > 0.95 * max_sales)) {
      continue;
    }
    tmp16.data[tmp17] = c.cust;
    tmp17++;
  }
  tmp16.len = tmp17;
  list_int best_ss_customer = tmp16;
  list_float tmp19 = list_float_create(catalog_sales.len * date_dim.len);
  int tmp20 = 0;
  for (int tmp21 = 0; tmp21 < catalog_sales_len; tmp21++) {
    catalog_sale_t cs = catalog_sales[tmp21];
    for (int tmp22 = 0; tmp22 < date_dim_len; tmp22++) {
      date_dim_t d = date_dim[tmp22];
      if (!(cs.cs_sold_date_sk == d.d_date_sk)) {
        continue;
      }
      if (!(contains_list_int(
              frequent_ss_items,
              contains_list_int(best_ss_customer, d.d_year == 2000 &&
                                                      d.d_moy == 1 &&
                                                      cs.cs_bill_customer_sk) &&
                  cs.cs_item_sk))) {
        continue;
      }
      tmp19.data[tmp20] = cs.cs_quantity * cs.cs_list_price;
      tmp20++;
    }
  }
  tmp19.len = tmp20;
  list_float catalog = tmp19;
  list_float tmp23 = list_float_create(web_sales.len * date_dim.len);
  int tmp24 = 0;
  for (int tmp25 = 0; tmp25 < web_sales_len; tmp25++) {
    web_sale_t ws = web_sales[tmp25];
    for (int tmp26 = 0; tmp26 < date_dim_len; tmp26++) {
      date_dim_t d = date_dim[tmp26];
      if (!(ws.ws_sold_date_sk == d.d_date_sk)) {
        continue;
      }
      if (!(contains_list_int(
              frequent_ss_items,
              contains_list_int(best_ss_customer, d.d_year == 2000 &&
                                                      d.d_moy == 1 &&
                                                      ws.ws_bill_customer_sk) &&
                  ws.ws_item_sk))) {
        continue;
      }
      tmp23.data[tmp24] = ws.ws_quantity * ws.ws_list_price;
      tmp24++;
    }
  }
  tmp23.len = tmp24;
  list_float web = tmp23;
  double result = _sum_float(catalog) + _sum_float(web);
  _json_float(result);
  test_TPCDS_Q23_cross_channel_sales_result = result;
  test_TPCDS_Q23_cross_channel_sales();
  free(tmp13.data);
  free(best_ss_customer.data);
  return 0;
}
